# poetry-science-env

./: .gitignore  README.md  pyproject.toml  tasks.md
configs/: jupyter_notebook_config.py
envs/: gv-ec2-cpu-poetry-show.txt  gv-ec2-cpu-pyproj-env.toml  gv-vm-a100-pyporj-env.toml  gv-vm-cpu-pyproj-env.toml  p4-poetry-show.txt  p4-pyproj-env.toml
scripts/: kill_my_cuda_processes.py  launch_jupyter.sh  launch_tensorboard.sh  mount_efs.sh  view_cuda_procs.py  view_my_cuda_processes.py
