[tool.poetry]
name = "poetry-science-env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include = ["pyproject.toml"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.10"
numpy = "^1.23.4"
pandas = "^1.5.1"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
networkx = "^3.0"
numba = "^0.56.4"
awswrangler = "^3.0.0"
boto3 = "^1.24.59"
ipython = "^8.12.0"
ipykernel = "^6.22.0"
contexttimer = "^0.3.3"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
notebook = "^6.5.4"
jupyter = "^1.0.0"

[tool.poetry.group.chemistry]
optional = true

[tool.poetry.group.chemistry.dependencies]
rdkit-pypi = "^2022.9.5"
matchms = "^0.18.0"

[tool.poetry.group.torch]
optional = true

[tool.poetry.group.torch.dependencies]
pytorch-lightning = "^1.6.5"
wandb = "^0.13.7"
transformers = "^4.24.0"

