[tool.poetry]
name = "poetry-science-env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include = ["pyproject.toml"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.4"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
networkx = "^3.0"
numba = "^0.56.4"
awswrangler = "^3.0.0"
boto3 = "^1.24.59"
s3fs = "^2023.4.0"
ipython = "^8.12.2"
contexttimer = "^0.3.3"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
jupyter = "^1.0.0"