[tool.poetry]
name = "poetry-science-env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include = ["pyproject.toml"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
networkx = "^3.0"
numba = "^0.56.4"
awswrangler = "^3.0.0"
boto3 = "^1.24.59"
s3fs = "^2023.4.0"
ipython = "^8.12.2"
contexttimer = "^0.3.3"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
jupyter = "^1.0.0"
metabolomics = {git = "https://github.com/enveda/metabolomics.git", rev = "gv-dev"}
spectral-inference-zoo = {git = "https://github.com/enveda/spectral-inference-zoo.git", rev = "gv-dev"}
denovo-structure-prediction = {git = "https://github.com/enveda/denovo-structure-prediction.git", rev = "gv-dev"}
molecular-graph-edit = {git = "https://github.com/enveda/molecular-graph-edit.git", rev = "gv-dev"}
molecular-library-search = {git = "https://github.com/enveda/molecular-library-search.git", rev = "gv-dev"}

deepsmiles = "^1.0.1"
tokenizers = ">=0.20.1"
transformers = ">=4.46.0"
torch-geometric = "2.4.0"

azure-storage-blob = "^12.20.0"
azure-keyvault-secrets = "^4.8.0"
azure-identity = "^1.17.1"
azure-mgmt-resource = "^23.1.1"
azure-mgmt-storage = "^21.2.1"
azure-keyvault = "^4.2.0"
azure-mgmt-subscription = "^3.1.1"
pyarrow = "^18.0.0"
fastparquet = "^2024.5.0"
levenshtein = "0.25.1"

[[tool.poetry.source]]
name = "Enveda"
url = "https://pypi.dev.enveda.io/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"